# typer

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
assets/: 10000_en.txt  longest.py
src/: CMakeLists.txt  colors.h  const.h  displayer.cpp  displayer.h  layout.h  main.cpp  session.h  stats.h  text.cpp  text.h  text_displayer.cpp  text_displayer.h  theme.h  vocabulary.cpp  vocabulary.h  word.cpp  word.h  word_run.cpp  word_run.h
